--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = {version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.89"
 uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
 url = "2.3.1"
+flate2 = "1.0.25"
 
 futures = "0.3.21"
 async-trait = "0.1.59"
