--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ serde_json = "1.0.89"
 uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
 url = "2.3.1"
 flate2 = "1.0.25"
+rust_decimal = "1.27.0"
+rust_decimal_macros = "1.27"
 
 futures = "0.3.21"
 async-trait = "0.1.59"
