--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ url = "2.3.1"
 flate2 = "1.0.25"
 rust_decimal = "1.27.0"
 rust_decimal_macros = "1.27"
+tui = "0.19.0"
+crossterm = "0.25"
 
 futures = "0.3.21"
 async-trait = "0.1.59"
